Added comment for mitigation

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,4 +2,5 @@ FROM php:7.2.11-apache-stretch
 
 COPY challenge/ /var/www/challenge/
 COPY poc/ /var/www/poc/
+COPY secure/ /var/www/secure/
 COPY vhosts.conf /etc/apache2/conf-enabled/vhosts.conf
