--- a/src/vhosts.conf
+++ b/src/vhosts.conf
@@ -7,3 +7,8 @@ ServerName chall.local.xss.moe
 DocumentRoot /var/www/poc
 ServerName poc.local.xss.moe
 </VirtualHost>
+
+<VirtualHost *:80>
+DocumentRoot /var/www/secure
+ServerName secure.local.xss.moe
+</VirtualHost>
